srv/bareos/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bareos-db
  labels:
    app: bareos-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-db
    spec:
      containers:
      - name: bareos-db
        image: postgres:9.3
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
        volumeMounts:
        - name: pv-bareos-db-postgresql
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: bareos-db-password
        secret:
          secretName: bareos-db-password
      - name: pv-bareos-db-postgresql
        persistentVolumeClaim:
          claimName: pv-bareos-db-postgresql

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bareos-dir
  labels:
    app: bareos-dir
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-dir
    spec:
      containers:
      - name: bareos-dir
        image: barcus/bareos-director:pgsql_latest
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
        volumeMounts:
        - name: pv-bareos-dir-data
          mountPath: /var/lib/bareos
        - name: pv-bareos-dir-etc
          mountPath: /etc/bareos
      volumes:
      - name: bareos-sd-password
        secret:
          secretName: bareos-sd-password
      - name: pv-bareos-dir-data
        persistentVolumeClaim:
          claimName: pv-bareos-dir-data
      - name: pv-bareos-dir-etc
        persistentVolumeClaim:
          claimName: pv-bareos-dir-etc

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bareos-fd
  labels:
    app: bareos-fd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-fd
    spec:
      containers:
      - name: bareos-fd
        image: barcus/bareos-client
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
        volumeMounts:
        - name: pv-bareos-fd-etc
          mountPath: /etc/bareos
        - name: pv-bareos-fd-dir-data
          mountPath: /var/lib/bareos-director
      volumes:
      - name: bareos-fd-password
        secret:
          secretName: bareos-fd-password
      - name: pv-bareos-fd-etc
        persistentVolumeClaim:
          claimName: pv-bareos-fd-etc
      - name: pv-bareos-fd-dir-data
        persistentVolumeClaim:
          claimName: pv-bareos-fd-dir-data

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bareos-sd
  labels:
    app: bareos-sd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-sd
    spec:
      containers:
      - name: bareos-sd
        image: barcus/bareos-storage
        ports:
        - name: bareos
          containerPort: 9103
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
        volumeMounts:
        - name: pv-bareos-sd-data
          mountPath: /var/lib/bareos/storage
        - name: pv-bareos-sd-etc
          mountPath: /etc/bareos
      volumes:
      - name: bareos-sd-password
        secret:
          secretName: bareos-sd-password
      - name: pv-bareos-sd-data
        persistentVolumeClaim:
          claimName: pv-bareos-sd-data
      - name: pv-bareos-sd-etc
        persistentVolumeClaim:
          claimName: pv-bareos-sd-etc

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bareos-webui
  labels:
    app: bareos-webui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-webui
    spec:
      containers:
      - name: bareos-webui
        image: barcus/bareos-webui
        ports:
        - name: bareos
          containerPort: 80
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
        volumeMounts:
        - name: pv-bareos-webui
          mountPath: /etc/bareos-webui
      volumes:
      - name: pv-bareos-webui
        persistentVolumeClaim:
          claimName: pv-bareos-webui

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bareos-smtpd
  labels:
    app: bareos-smtpd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-smtpd
    spec:
      containers:
      - name: bareos-smtpd
        image: namshi/smtp
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
