srv/bareos/bareos-smtpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-smtpd
  name: bareos-smtpd
  namespace: producao
spec:
  selector:
    matchLabels:
      app: bareos-smtpd
  template:
    metadata:
      labels:
        app: bareos-smtpd
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Recife            
            - name: GMAIL_USER
              valueFrom:
                secretKeyRef:
                  name: bareos-smtpd
                  key: bareos-smtpd-user
            - name: GMAIL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: bareos-smtpd
                  key: bareos-smtpd-password
          image: namshi/smtp
          name: bareos-smtpd
          resources:
            limits:
              cpu: 500m
              memory: 64Mi
            requests:
              cpu: 1m
              memory: 16Mi
