srv/bareos/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bareos-db
spec:
  ports:
  - name: bareos-db
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: bareos-db

---

apiVersion: v1
kind: Service
metadata:
  name: bareos-dir
spec:
  ports:
  - name: bareos-dir
    port: 9101
    protocol: TCP
    targetPort: 9101
  selector:
    app: bareos-dir

---

apiVersion: v1
kind: Service
metadata:
  name: bareos-fd
spec:
  ports:
  - name: bareos-fd
    port: 9102
    protocol: TCP
    targetPort: 9102
  selector:
    app: bareos-fd

---

apiVersion: v1
kind: Service
metadata:
  name: bareos-sd
spec:
  ports:
  - name: bareos-sd
    port: 9103
    protocol: TCP
    targetPort: 9103
  selector:
    app: bareos-sd

---

apiVersion: v1
kind: Service
metadata:
  name: bareos-sd-externo
spec:
  externalIPs:
    - "191.36.8.1"
    - "191.36.8.4"
    - "191.36.8.6"
    - "191.36.8.7"
    - "191.36.8.25"
  ports:
  - name: bareos-sd
    port: 9103
    protocol: TCP
    targetPort: 9103
  selector:
    app: bareos-sd

---

apiVersion: v1
kind: Service
metadata:
  name: bareos-webui
spec:
  ports:
  - name: bareos-webui
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bareos-webui

---

apiVersion: v1
kind: Service
metadata:
  name: bareos-smtpd
spec:
  ports:
  - name: bareos-smtpd
    port: 25
    protocol: TCP
    targetPort: 25
  selector:
    app: bareos-smtpd
