srv/bareos/bareos-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: bareos-db
  namespace: producao
spec:
  ports:
    - name: bareos-db
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: bareos-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-db
  name: bareos-db
  namespace: producao
spec:
  selector:
    matchLabels:
      app: bareos-db
  template:
    metadata:
      labels:
        app: bareos-db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-db-password
                  name: bareos-db-password
            - name: TZ
              value: America/Recife
          image: "postgres:9.3"
          name: bareos-db
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pv-bareos-db-postgresql
      volumes:
        - name: bareos-db-password
          secret:
            secretName: bareos-db-password
        - name: pv-bareos-db-postgresql
          persistentVolumeClaim:
            claimName: pv-bareos-db-postgresql
