srv/bareos/bareos-fd.yaml
apiVersion: v1
kind: Service
metadata:
  name: bareos-fd
  namespace: producao
spec:
  ports:
    - name: bareos-fd
      port: 9102
      protocol: TCP
      targetPort: 9102
  selector:
    app: bareos-fd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-fd
  name: bareos-fd
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-fd
    spec:
      containers:
        - env:
            - name: BAREOS_FD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-fd-password
                  name: bareos-fd-password
            - name: TZ
              value: America/Recife
          image: "barcus/bareos-client:18-ubuntu"
          name: bareos-fd
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 1
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/bareos
              name: pv-bareos-fd-etc
            - mountPath: /var/lib/bareos-director
              name: pv-bareos-fd-dir-data
      volumes:
        - name: bareos-fd-password
          secret:
            secretName: bareos-fd-password
        - name: pv-bareos-fd-etc
          persistentVolumeClaim:
            claimName: pv-bareos-fd-etc
        - name: pv-bareos-fd-dir-data
          persistentVolumeClaim:
            claimName: pv-bareos-fd-dir-data
