srv/bareos/bareos-sd.yaml
apiVersion: v1
kind: Service
metadata:
  name: bareos-sd
  namespace: producao
spec:
  ports:
    - name: bareos-sd
      port: 9103
      protocol: TCP
      targetPort: 9103
  selector:
    app: bareos-sd

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-sd-externo
  namespace: producao
spec:
  externalIPs:
    - "191.36.8.1"
    - "191.36.8.4"
    - "191.36.8.6"
    - "191.36.8.7"
    - "191.36.8.25"
  ports:
    - name: bareos-sd
      port: 9103
      protocol: TCP
      targetPort: 9103
  selector:
    app: bareos-sd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-sd
  name: bareos-sd
  namespace: producao
spec:
  selector:
    matchLabels:
      app: bareos-sd
  template:
    metadata:
      labels:
        app: bareos-sd
    spec:
      containers:
        - env:
            - name: BAREOS_SD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-sd-password
                  name: bareos-sd-password
            - name: TZ
              value: America/Recife
          image: "barcus/bareos-storage:19-ubuntu"
          name: bareos-sd
          ports:
            - containerPort: 9103
              name: bareos
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 180m
              memory: 128Mi
          volumeMounts:
            - mountPath: /var/lib/bareos/storage
              name: pv-bareos-sd-data
            - mountPath: /etc/bareos
              name: pv-bareos-sd-etc
      volumes:
        - name: bareos-sd-password
          secret:
            secretName: bareos-sd-password
        - name: pv-bareos-sd-data
          persistentVolumeClaim:
            claimName: pv-bareos-sd-data
        - name: pv-bareos-sd-etc
          persistentVolumeClaim:
            claimName: pv-bareos-sd-etc
