srv/bareos/baseos-dir.yaml
apiVersion: v1
kind: Service
metadata:
  name: bareos-dir
  namespace: producao
spec:
  ports:
    - name: bareos-dir
      port: 9101
      protocol: TCP
      targetPort: 9101
  selector:
    app: bareos-dir

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-dir
  name: bareos-dir
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-dir
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Recife
            - name: ADMIN_MAIL
              value: "humbertos@ifsc.edu.br,gabriel.souza@ifsc.edu.br,marcelo.muniz@ifsc.edu.br,rmartins@ifsc.edu.br"
            - name: BAREOS_FD_HOST
              value: bareos-fd
            - name: BAREOS_FD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-fd-password
                  name: bareos-fd-password
            - name: BAREOS_SD_HOST
              value: bareos-sd
            - name: BAREOS_SD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-sd-password
                  name: bareos-sd-password
            - name: BAREOS_WEBUI_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-webui-password
                  name: bareos-webui-password
            - name: DB_HOST
              value: bareos-db
            - name: PGHOST
              value: bareos-db
            - name: PGUSER
              value: postgres
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-db-password
                  name: bareos-db-password
            - name: PGPASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-db-password
                  name: bareos-db-password
            - name: DB_PORT
              value: "5432"
            - name: SMTP_HOST
              value: bareos-smtpd
          image: "barcus/bareos-director:18-ubuntu-pgsql"
          name: bareos-dir
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 1
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/lib/bareos
              name: pv-bareos-dir-data
            - mountPath: /etc/bareos
              name: pv-bareos-dir-etc
      volumes:
        - name: bareos-sd-password
          secret:
            secretName: bareos-sd-password
        - name: bareos-db-password
          secret:
            secretName: bareos-db-password
        - name: pv-bareos-dir-data
          persistentVolumeClaim:
            claimName: pv-bareos-dir-data
        - name: pv-bareos-dir-etc
          persistentVolumeClaim:
            claimName: pv-bareos-dir-etc
