srv/bareos/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: bareos
  annotations:    
    # Solução para liberar somente à redes definidas
    nginx.ingress.kubernetes.io/whitelist-source-range: "191.36.0.0/17,2804:1454::/32,172.30.0.0/24,172.18.0.0/18"
spec:
  tls:
    - hosts:
        - bareos.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard
  rules:
    - host: bareos.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: bareos-webui
              servicePort: 80
