srv/bareos/bareos.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "191.36.0.0/17,2804:1454::/32,172.30.0.0/24,172.18.0.0/18"
  name: bareos
  namespace: producao
spec:
  rules:
    - host: bareos.sj.ifsc.edu.br
      http:
        paths:
          - backend:
              serviceName: bareos-webui
              servicePort: 80
            path: /
  tls:
    - hosts:
        - bareos.sj.ifsc.edu.br
      secretName: tls-ifsc-sje-wildcard

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-db
  namespace: producao
spec:
  ports:
    - name: bareos-db
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: bareos-db

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-dir
  namespace: producao
spec:
  ports:
    - name: bareos-dir
      port: 9101
      protocol: TCP
      targetPort: 9101
  selector:
    app: bareos-dir

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-fd
  namespace: producao
spec:
  ports:
    - name: bareos-fd
      port: 9102
      protocol: TCP
      targetPort: 9102
  selector:
    app: bareos-fd

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-sd
  namespace: producao
spec:
  ports:
    - name: bareos-sd
      port: 9103
      protocol: TCP
      targetPort: 9103
  selector:
    app: bareos-sd

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-sd-externo
  namespace: producao
spec:
  externalIPs:
    - "191.36.8.1"
    - "191.36.8.4"
    - "191.36.8.6"
    - "191.36.8.7"
    - "191.36.8.25"
  ports:
    - name: bareos-sd
      port: 9103
      protocol: TCP
      targetPort: 9103
  selector:
    app: bareos-sd

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-webui
  namespace: producao
spec:
  ports:
    - name: bareos-webui
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: bareos-webui

---
apiVersion: v1
kind: Service
metadata:
  name: bareos-smtpd
  namespace: producao
spec:
  ports:
    -
      name: bareos-smtpd
      port: 25
      protocol: TCP
      targetPort: 25
  selector:
    app: bareos-smtpd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-db
  name: bareos-db
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-db-password
                  name: bareos-db-password
            - name: TZ
              value: America/Recife
          image: "postgres:9.3"
          name: bareos-db
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pv-bareos-db-postgresql
      volumes:
        - name: bareos-db-password
          secret:
            secretName: bareos-db-password
        - name: pv-bareos-db-postgresql
          persistentVolumeClaim:
            claimName: pv-bareos-db-postgresql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-dir
  name: bareos-dir
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-dir
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Recife
            - name: ADMIN_MAIL
              value: "humbertos@ifsc.edu.br,gabriel.souza@ifsc.edu.br,marcelo.muniz@ifsc.edu.br,rmartins@ifsc.edu.br"
            - name: BAREOS_FD_HOST
              value: bareos-fd
            - name: BAREOS_FD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-fd-password
                  name: bareos-fd-password
            - name: BAREOS_SD_HOST
              value: bareos-sd
            - name: BAREOS_SD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-sd-password
                  name: bareos-sd-password
            - name: BAREOS_WEBUI_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-webui-password
                  name: bareos-webui-password
            - name: DB_HOST
              value: bareos-db
            - name: PGHOST
              value: bareos-db
            - name: PGUSER
              value: postgres
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-db-password
                  name: bareos-db-password
            - name: PGPASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-db-password
                  name: bareos-db-password
            - name: DB_PORT
              value: "5432"
            - name: SMTP_HOST
              value: bareos-smtpd
          image: "barcus/bareos-director:18-ubuntu-pgsql"
          name: bareos-dir
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 1
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/lib/bareos
              name: pv-bareos-dir-data
            - mountPath: /etc/bareos
              name: pv-bareos-dir-etc
      volumes:
        - name: bareos-sd-password
          secret:
            secretName: bareos-sd-password
        - name: bareos-db-password
          secret:
            secretName: bareos-db-password
        - name: pv-bareos-dir-data
          persistentVolumeClaim:
            claimName: pv-bareos-dir-data
        - name: pv-bareos-dir-etc
          persistentVolumeClaim:
            claimName: pv-bareos-dir-etc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-fd
  name: bareos-fd
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-fd
    spec:
      containers:
        - env:
            - name: BAREOS_FD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-fd-password
                  name: bareos-fd-password
            - name: TZ
              value: America/Recife
          image: "barcus/bareos-client:18-ubuntu"
          name: bareos-fd
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 1
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/bareos
              name: pv-bareos-fd-etc
            - mountPath: /var/lib/bareos-director
              name: pv-bareos-fd-dir-data
      volumes:
        - name: bareos-fd-password
          secret:
            secretName: bareos-fd-password
        - name: pv-bareos-fd-etc
          persistentVolumeClaim:
            claimName: pv-bareos-fd-etc
        - name: pv-bareos-fd-dir-data
          persistentVolumeClaim:
            claimName: pv-bareos-fd-dir-data

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-sd
  name: bareos-sd
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-sd
    spec:
      containers:
        - env:
            - name: BAREOS_SD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-sd-password
                  name: bareos-sd-password
            - name: TZ
              value: America/Recife
          image: "barcus/bareos-storage:18-ubuntu"
          name: bareos-sd
          ports:
            - containerPort: 9103
              name: bareos
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - mountPath: /var/lib/bareos/storage
              name: pv-bareos-sd-data
            - mountPath: /etc/bareos
              name: pv-bareos-sd-etc
      volumes:
        - name: bareos-sd-password
          secret:
            secretName: bareos-sd-password
        - name: pv-bareos-sd-data
          persistentVolumeClaim:
            claimName: pv-bareos-sd-data
        - name: pv-bareos-sd-etc
          persistentVolumeClaim:
            claimName: pv-bareos-sd-etc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-webui
  name: bareos-webui
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-webui
    spec:
      containers:
        - env:
            - name: BAREOS_DIR_HOST
              value: bareos-dir
            - name: TZ
              value: America/Recife
          image: "barcus/bareos-webui:19-ubuntu"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
          name: bareos-webui
          ports:
            - containerPort: 80
              name: bareos
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 1
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/bareos-webui
              name: pv-bareos-webui
      volumes:
        - name: pv-bareos-webui
          persistentVolumeClaim:
            claimName: pv-bareos-webui

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bareos-smtpd
  name: bareos-smtpd
  namespace: producao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bareos-smtpd
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Recife
            - name: SMARTHOST_ADDRESS
              value: zimbra.ifsc.edu.br
            - name: SMARTHOST_ALIASES
              value: "*.ifsc.edu.br"
            - name: SMARTHOST_PORT
              value: "587"
            - name: RELAY_NETWORKS
              value: ":10.42.0.0/16"
            - name: SMARTHOST_USER
              valueFrom:
                secretKeyRef:
                  key: bareos-smtpd-user
                  name: bareos-smtpd-user
            - name: SMARTHOST_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: bareos-smtpd-password
                  name: bareos-smtpd-password
          image: namshi/smtp
          name: bareos-smtpd
          resources:
            limits:
              cpu: 1
              memory: 256Mi
            requests:
              cpu: 1
              memory: 128Mi
      volumes:
        - name: bareos-smtpd-password
          secret:
            secretName: bareos-smtpd-password
        - name: bareos-smtpd-user
          secret:
            secretName: bareos-smtpd-user
